# vibejudge-ai

./: .banditrc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ANTHROPIC_USE_CASE_FORM.md  API_KEY_CONSOLIDATION_PLAN.md  CONTRIBUTING.md  COST_REDUCTION_ANALYSIS.md  COST_TRACKING_FIX.md  DEPLOYMENT.md  DEPLOYMENT_2026-02-25.md  Dockerfile  E2E_TEST_RESULTS.md  E2E_TEST_SUMMARY.md  FRONTEND_FLOWS_ANALYSIS.md  LICENSE  Makefile  PERFORMANCE_VERIFICATION.md  PROJECT_PROGRESS.md  PUBLIC_ENDPOINT_FIX.md  QUICK_START.md  README.md  REALITY_CHECK.md  RESULTS_PAGE_FIXES_SUMMARY.md  RUFF_LINTING_SESSION_REVIEW.md  RUNBOOK.md  SECURITY_ENHANCEMENTS.md  SECURITY_TEST_STATUS.md  SESSION_REVIEW.md  SESSION_SUMMARY_2026-02-25.md  STREAMLIT_TEST_COVERAGE_ANALYSIS.md  TESTING.md  cloudwatch-queries.md  coverage.json  env.json  fix_mypy_errors.py  fix_test_keys.py  package.json  (+17 more)
.github/workflows/: e2e-tests.yml  tests.yml
.kiro/: config.json
.kiro/hooks/: auto-format-on-save.kiro.hook  auto-test-generator.md  auto-test-on-save.kiro.hook  auto-update-docs.md  review-before-commit.kiro.hook  smart-commit.md  update-docs-after-changes.kiro.hook
.kiro/specs/: IMPLEMENTATION_ROADMAP.md  vibejudge-mvp.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: 02-architecture-decision-records.md  03-dynamodb-data-model.md  04-agent-prompt-library.md  05-api-specification.md  06-sam-template.md  07-pydantic-models.md  08-git-analysis-spec.md  09-project-structure.md  10-test-scenarios.md  README.md  VIBEJUDGE_FRONTEND_BACKEND_SEPARATION.md  VIBEJUDGE_HUMAN_LAYER_ADDENDUM.md  VIBEJUDGE_SELF_SERVICE_PORTAL_CONCEPT.md  VIBEJUDGE_STRATEGIC_ENHANCEMENT_PLAN.md  performance-optimization.md
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  QUICK_START.md
e2e_tests/: FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_STRATEGY.md  TEST_RESULTS.md  conftest.py  inspect_selectors.py  playwright_config.py
e2e_tests/fixtures/: __init__.py  api_mocks.py
e2e_tests/pages/: __init__.py  base_page.py  create_hackathon_page.py  intelligence_page.py  live_dashboard_page.py  login_page.py  manage_hackathons_page.py  results_page.py  settings_page.py  submissions_page.py  submit_page.py
e2e_tests/tests/: __init__.py  test_analysis_flows.py  test_auth_flows.py  test_demo_both_approaches.py  test_hackathon_flows.py  test_intelligence_flows.py  test_results_flows.py  test_settings_flows.py  test_simple_e2e.py  test_stats_flows.py  test_submission_flows.py
events/: test-analysis-request.json  test-analysis.json  test-api-event.json
scripts/: README.md  clear_and_test_e2e.py  comprehensive_test.sh  deploy.sh  endpoint_test_results.txt  final_test_results.txt  fix_mypy_errors.py  fix_remaining.sh  fix_test_keys.py  run_e2e_tests.sh  start_local.sh  test_all_endpoints.sh  test_api_direct.py  test_complete.sh  test_dashboard_api.py  test_dashboard_auth.py  test_dashboard_auth.sh  test_deployment.sh  test_endpoints_fixed.sh  test_local_api.py  test_patch_endpoint.py  test_results.txt  test_results_page_pipeline.sh  verify_cost_reduction.py
src/: __init__.py  constants.py
src/agents/: __init__.py  ai_detection.py  base.py  bug_hunter.py  innovation.py  performance.py
src/analysis/: actions_analyzer.py  brand_voice_transformer.py  context_builder.py  cost_tracker.py  dashboard_aggregator.py  git_analyzer.py  lambda_handler.py  orchestrator.py  performance_monitor.py  static_analysis_engine.py  strategy_detector.py  team_analyzer.py
src/api/: dependencies.py  main.py
src/models/: __init__.py  analysis.py  api_key.py  common.py  costs.py  dashboard.py  errors.py  feedback.py  hackathon.py  leaderboard.py  organizer.py  rate_limit.py  scores.py  static_analysis.py  strategy.py  submission.py  team_dynamics.py  test_execution.py
src/prompts/: __init__.py  ai_detection_v1.py  bug_hunter_v1.py  innovation_v1.py  performance_v1.py
src/services/: __init__.py  analysis_service.py  api_key_service.py  cost_estimation_service.py  cost_service.py  hackathon_service.py  organizer_intelligence_service.py  organizer_service.py  submission_service.py  usage_tracking_service.py
src/utils/: bedrock.py  config.py  dynamo.py  github_client.py  id_gen.py  logging.py
streamlit_ui/: .env.example  .gitignore  README.md  __init__.py  app.py  requirements-dev.txt  requirements.txt
streamlit_ui/.streamlit/: config.toml
streamlit_ui/components/: __init__.py  api_client.py  auth.py  charts.py  formatters.py  retry_helpers.py  safe_render.py  validators.py
streamlit_ui/pages/: 0_��_Register.py  0_📝_Register.py  1_🎯_Create_Hackathon.py  2_📊_Live_Dashboard.py  3_🏆_Results.py  4_💡_Intelligence.py  5_Manage_Hackathons.py  6_Submissions.py  7_Submit.py  8_⚙️_Settings.py  __init__.py
streamlit_ui/tests/: __init__.py  conftest.py  test_analysis_response_display_properties.py  test_analysis_trigger_properties.py  test_api_client.py  test_api_client_properties.py  test_auth.py  test_auth_properties.py  test_authentication_integration.py  test_cache_ttl_properties.py  test_charts_properties.py  test_cost_estimate_display_properties.py  test_error_logging_properties.py  test_failure_details_display_properties.py  (+18 more)
tests/: conftest.py
(+85 files in other folders)
