# VibeJudge AI — Project Configuration

[project]
name = "vibejudge-ai"
version = "1.0.0"
description = "AI-powered hackathon judging platform using Amazon Bedrock"
authors = [
    {name = "Maku Mazakpe", email = "maku@vibecoders.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["hackathon", "judging", "ai", "bedrock", "aws"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/vibecoders/vibejudge-ai"
Documentation = "https://github.com/vibecoders/vibejudge-ai/docs"
Repository = "https://github.com/vibecoders/vibejudge-ai"
Issues = "https://github.com/vibecoders/vibejudge-ai/issues"

# ============================================================
# RUFF CONFIGURATION
# ============================================================

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

# Exclude directories
exclude = [
    ".git",
    ".aws-sam",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends)
    "ARG001", # Unused function argument (common in FastAPI dependencies)
    "ARG002", # Unused method argument
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ============================================================
# BLACK CONFIGURATION
# ============================================================

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.aws-sam
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

# ============================================================
# MYPY CONFIGURATION
# ============================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # ✅ STRICT: All functions must have type hints
disallow_incomplete_defs = true  # ✅ STRICT: No partial type hints
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "mangum.*",
    "git.*",
    "ulid.*",
    "moto.*",
]
ignore_missing_imports = true

# ============================================================
# PYTEST CONFIGURATION
# ============================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (mocked AWS)",
    "slow: Slow tests (skip with -m 'not slow')",
    "bedrock: Tests requiring Bedrock access",
    "performance: Performance tests (verify timing targets)",
]
env = [
    "AWS_DEFAULT_REGION=us-east-1",
    "DYNAMODB_TABLE_NAME=VibeJudgeTable-Test",
    "LOG_LEVEL=ERROR",
    "MOTO_MOCK_AWS=true",
]

# ============================================================
# COVERAGE CONFIGURATION
# ============================================================

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
fail_under = 80  # ✅ ENFORCE: Minimum 80% coverage required

[tool.coverage.html]
directory = "htmlcov"


# ============================================================
# INTERROGATE CONFIGURATION (Docstring Coverage)
# ============================================================

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
fail-under = 80
exclude = ["tests", "docs", "build", "dist"]
verbose = 1
quiet = false
color = true
